--- a/多音言葉/support/mail/index.html
+++ b/多音言葉/support/mail/index.html
@@ -91,7 +91,7 @@ html {
     <h2 style="text-align: center;">サポートチームへのメールでのお問い合わせ</h2>
     <p style="text-align: center;">以下のメールアドレスからお問い合わせください。</p>
     <div class="container slideIn">
-      <div style="text-align: center;">kotoha-project【a】outlook.com</div>
+      <div style="text-align: center;">kotoha【a】くぁｗせｄｒｆｔｇｙふじこｌｐ.com</div>
     </div>
     <footer>
       <p>Copyright &copy; 2024-2025 多音言葉. All rights reserved.</p>
